--- a/public/scss/components/_science-blog.scss
+++ b/public/scss/components/_science-blog.scss
@@ -25,16 +25,28 @@
     padding: 0;
     margin: 0;
     display: block;
+    padding-top: 10px;
+
+    margin-bottom: 0;
+    
+    border-bottom: 2px solid lighten($color--gray-darker, 40%);
+    min-height: 94px;
+    
+    &:last-child {
+      border-bottom: 0;
+    }
     
     @include breakpoint($bp--medium-up) {
       float: left;
-      width: 32.333%;
-      padding-right: 15px;
-      margin-left: 15px;
+      width: 32%;
+      padding-right: 1%;
+      margin-left: 1%;
       padding-top: 25px;
       padding-bottom: 25px;
       border-right: 2px solid lighten($color--gray-darker, 40%);
-
+      border-bottom: 0;
+      
+      
       &:first-child {
         margin-left: 0;
       }
@@ -48,6 +60,7 @@
   .block-blog__inner {
     position: relative;
     padding-left: 84px;
+    @extend .cf;
   }
   .block-blog__img {
     position: absolute;
